# porffor

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/porffor-aot-wasm/: Cargo.toml
crates/porffor-aot-wasm/src/: lib.rs
crates/porffor-backend-c/: Cargo.toml
crates/porffor-backend-native/: Cargo.toml
crates/porffor-cli/: Cargo.toml
crates/porffor-cli/src/: main.rs
crates/porffor-cli/tests/: cli.rs
crates/porffor-cli/tests/fixtures/: hello.js  wasm_abrupt_core.js  wasm_abstract_module_source_host_hook.js  wasm_aggregateerror_cross_realm_newtarget.js  wasm_aggregateerror_iterable_to_list.js  wasm_aggregateerror_newtarget_prototype.js  wasm_annexb_escape_unescape_core.js  wasm_array_concat_core.js  wasm_array_concat_species_core.js  wasm_array_concat_species_target_writes.js  wasm_array_concat_spreadable_core.js  wasm_array_concat_spreadable_order_errors.js  wasm_array_concat_spreadable_receiver.js  wasm_array_constructor_length_core.js  wasm_array_descriptor_core.js  wasm_array_flat_array_like_core.js  wasm_array_flat_constructor_core.js  wasm_array_flat_core.js  wasm_array_flat_map_core.js  wasm_array_flat_map_dense_array_like.js  wasm_array_flat_map_proxy_access_count.js  wasm_array_flat_map_sparse_array_like.js  wasm_array_flat_map_species_core.js  wasm_array_flat_map_species_custom_ctor.js  wasm_array_flat_proxy_access_count.js  wasm_array_flat_species_target_writes.js  wasm_array_foreach_byte_values.js  wasm_array_map_core.js  wasm_array_map_species_core.js  wasm_array_map_species_target_writes.js  wasm_array_sparse_index_no_trap.js  wasm_array_species_getter_core.js  wasm_arraybuffer_bytelength_wrong_receiver.js  wasm_arraybuffer_constructor_newtarget.js  wasm_arraybuffer_cross_realm_newtarget.js  wasm_arraybuffer_descriptors.js  wasm_arraybuffer_detach.js  wasm_arraybuffer_immutable_slice.js  wasm_arraybuffer_isview_core.js  wasm_arraybuffer_prototype_core.js  (+94 more)
crates/porffor-engine/: Cargo.toml
crates/porffor-engine/src/: lib.rs
crates/porffor-front/: Cargo.toml
scripts/: publish-real-status-low-ram.sh
test262/: harness-wasm-aot.js  harness.js
(+51554 files in other folders)
