[package]
name = "porffor-aot-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
porffor-ir = { path = "../porffor-ir" }
wasm-encoder = "0.245.1"

[dev-dependencies]
porffor-front = { path = "../porffor-front" }
wasmparser = "0.245.1"

[lib]
path = "src/lib.rs"
