[package]
name = "porffor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
porffor-engine = { path = "../porffor-engine" }
porffor-test262 = { path = "../porffor-test262" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "porf"
path = "src/main.rs"
